<resources>
    <string name="app_name">HeadLines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_reading">Start Reading</string>
    <string name="splash_desc">STAY UPDATE WITH\nARTICLES DESIGNED\nFOR YOU</string>
    <string name="fashion">FASHION</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="automotive">AUTOMOTIVE</string>
    <string name="business">BUSINESS</string>
</resources>